# filebot

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: implementation-phases.md
src/: __init__.py
src/filebot/: app.py
src/filebot/core/: __init__.py  config.py  models.py  registry.py
src/filebot/core/providers/: __init__.py  acoustid.py  anidb.py  base.py  episode_utils.py  fanarttv.py  omdb.py  opensubtitles.py  tmdb.py  tmdb_tv.py  tvdb.py  tvmaze.py  utils.py
src/filebot/ui/: __init__.py  flag_icons.py  icons.py  languages.py  main_window.py  styles.py
src/filebot/ui/components/: __init__.py  file_list.py  sidebar.py
src/filebot/ui/views/: __init__.py  episodes_panel.py  rename_panel.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_registry.py
tests/core/providers/: __init__.py  conftest.py  test_acoustid.py  test_base_restclient.py  test_episode_utils.py  test_fanarttv.py  test_omdb.py  test_opensubtitles.py  test_tmdb.py  test_tmdb_tv.py  test_tvdb.py  test_tvmaze.py  test_utils.py
tests/ui/: __init__.py  test_exports.py  test_icons.py
tests/ui/components/: __init__.py  test_file_list.py  test_sidebar.py
tests/ui/views/: __init__.py  test_episodes_panel.py  test_rename_panel.py
